# papillon-ndl

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  PapillonNDLConfig.cmake.in  README.md  pyPapillonNDLConfig.cmake.in
.github/workflows/: cmake.yml
docs/: Doxyfile.in  conf.py  index.rst  requirements.txt
docs/api/: angle_energy.rst  angular_distributions.rst  data.rst  energy_distributions.rst  functions.rst  index.rst  tools.rst  utils.rst
docs/install/: index.rst
docs/licens/: index.rst
docs/license/: english.rst  french.rst  index.rst
docs/tools/: index.rst  index.rst~  panglos.rst  panglos.rst~
docs/usage/: cpp.rst  index.rst  python.rst  python_tutorial.ipynb
docs/use/: cpp.rst  index.rst  py.rst
include/PapillonNDL/: absorption.hpp  ace.hpp  angle_distribution.hpp  angle_energy.hpp  angle_energy_packet.hpp  angle_law.hpp  angle_table.hpp  beta_alpha_table.hpp  ce_neutron.hpp  ce_neutron_base.hpp  cm_distribution.hpp  constant.hpp  constants.hpp  continuous_energy_discrete_cosines.hpp  cross_section.hpp  delayed_family.hpp  delayed_group.hpp  difference_1d.hpp  direct_sab.hpp  discrete_cosines_energies.hpp  discrete_photon.hpp  elastic.hpp  elastic_dbrc.hpp  elastic_doppler_broadener.hpp  elastic_svt.hpp  element.hpp  energy_angle_table.hpp  energy_grid.hpp  energy_law.hpp  equiprobable_angle_bins.hpp  equiprobable_energy_bins.hpp  evaporation.hpp  fission.hpp  fission_data.hpp  frame.hpp  function_1d.hpp  general_evaporation.hpp  integration.hpp  interpolation.hpp  isotope.hpp  (+42 more)
src/: ace.cpp  angle_distribution.cpp  angle_table.cpp  beta_alpha_table.cpp  ce_neutron.cpp  ce_neutron_base.cpp  cm_distribution.cpp  constants.hpp  continuous_energy_discrete_cosines.cpp  cross_section.cpp  delayed_family.cpp  delayed_group.cpp  direct_sab.cpp  discrete_cosines_energies.cpp  elastic.cpp  elastic_dbrc.cpp  elastic_svt.cpp  element.cpp  energy_angle_table.cpp  energy_grid.cpp  equiprobable_angle_bins.cpp  equiprobable_energy_bins.cpp  evaporation.cpp  fission.cpp  fission_data.cpp  frame.cpp  general_evaporation.cpp  integration.cpp  interpolation.cpp  isotropic.cpp  kalbach.cpp  kalbach_table.cpp  legendre.cpp  level_inelastic_scatter.cpp  linearize.cpp  maxwellian.cpp  mcnp_library.cpp  multi_region_1d.cpp  multiple_distribution.cpp  nbody.cpp  (+27 more)
src/python/: ace.cpp  angle_distribution.cpp  angle_energy.cpp  angle_energy_packet.cpp  angle_law.cpp  angle_table.cpp  ce_neutron.cpp  constant.cpp  cross_section.cpp  delayed_family.cpp  delayed_group.cpp  energy_angle_table.cpp  energy_grid.cpp  energy_law.cpp  equiprobable_angle_bins.cpp  equiprobable_energy_bins.cpp  evaporation.cpp  fission.cpp  fission_data.cpp  frame.cpp  function_1d.cpp  general_evaporation.cpp  interpolation.cpp  isotropic.cpp  kalbach.cpp  kalbach_table.cpp  level_inelastic_scatter.cpp  linearize.cpp  maxwellian.cpp  mcnp_library.cpp  multi_region_1d.cpp  nbody.cpp  nd_library.cpp  nuclide.cpp  pctable.cpp  polynomial_1d.cpp  prng.cpp  pyPapillonNDL.cpp  reaction.cpp  region_1d.cpp  (+10 more)
tests/: CMakeLists.txt  angle_law.cpp  function_1d.cpp  integration_tests.cpp  interpolation.cpp  interpolation_tests.cpp  main.cpp  multi_region_1d_tests.cpp  pctable.cpp  polynomial_1d_tests.cpp  region_1d_tests.cpp  xs_packet.cpp  zaid.cpp
tools/: CMakeLists.txt
tools/panglos/: CMakeLists.txt  README.md
tools/panglos/src/: ace.cpp  ace.hpp  coherent_elastic.cpp  coherent_elastic.hpp  constants.hpp  endf_sab.cpp  endf_sab.hpp  free_gas_sab.cpp  free_gas_sab.hpp  gauss_kronrod.cpp  gauss_kronrod.hpp  incoherent_elastic.cpp  incoherent_elastic.hpp  incoherent_inelastic.cpp  incoherent_inelastic.hpp  interpolator.hpp  linearize.hpp  main.cpp  sab.hpp  short_collision_time_sab.cpp  short_collision_time_sab.hpp  tabulated_sab.cpp  tabulated_sab.hpp  trapezoid.hpp
tools/samplers/: CMakeLists.txt  compare.py
tools/samplers/src/: sopenmc.cpp  spndl.cpp
tools/src/: sopenmc.cpp  spndl.cpp
